# ChronoTranscriber

./: .gitattributes  .gitignore  LICENSE  README.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v3.0.md  RELEASE_NOTES_v4.0.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
additional_context/: additional_context.txt
config/: api_keys_config.example.yaml  api_keys_config.yaml  concurrency_config.example.yaml  concurrency_config.yaml  image_processing_config.example.yaml  image_processing_config.yaml  model_config.example.yaml  model_config.yaml  paths_config.example.yaml  paths_config.yaml
context/: michelin_gt_transcr_context.txt
eval/: README.md  eval_config.yaml  jsonl_eval.py  metrics.py  transcription_eval.ipynb
eval/reports/: eval_results_20260220_201153.json  eval_results_20260220_201153.md  eval_results_20260220_221448.csv  eval_results_20260220_221448.json  eval_results_20260220_221448.md  eval_results_20260221_080714.csv  eval_results_20260221_080714.json  eval_results_20260221_080714.md  eval_results_20260221_082300.csv  eval_results_20260221_082300.json  eval_results_20260221_082300.md
eval/reports/latex_tables/: table_01_configuration.tex  table_02_cer_wer_by_category.tex  table_02_results_by_category.tex  table_03_formatting_compliance.tex  table_03_overall_rankings.tex  table_04_overall_rankings.tex  table_04_pages_claude_haiku_4_5_medium_address_books.tex  table_05_export_summary.tex  table_06_cost_reference.tex  table_06_export_summary.tex  table_06_performance_summary.tex  table_07_cost_reference.tex  table_08_performance_summary.tex
eval/schemas/: eval_transcription_schema.json
eval/scripts/: compare_backends.py  compute_metrics.py  generate_report.py  parse_jsonl.py
eval/test_data/input/: address_books.txt  military_records_transcr_context.txt
fine_tuning/: __init__.py  annotation_txt.py  annotations_jsonl.py  build_openai_vision_sft_jsonl.py  cli.py  jsonl_io.py  paths.py  sft_dataset.py  validation.py
main/: cancel_batches.py  check_batches.py  cost_analysis.py  postprocess_transcriptions.py  prepare_ground_truth.py  repair_transcriptions.py  unified_transcriber.py
modules/: __init__.py  batch_utils.py  batching.py  concurrency.py  config_loader.py  image_utils.py  logger.py  multiprocessing_utils.py  openai_sdk_utils.py  openai_utils.py  path_utils.py  pdf_utils.py  prompt_utils.py  repair_utils.py  schema_utils.py  text_processing.py  token_tracker.py  user_interface.py  utils.py  workflow.py
modules/batch/: __init__.py  cancel.py  check.py  jsonl.py  mapping.py  repair.py  requests.py  results.py  status.py  submission.py
modules/batch/backends/: __init__.py  anthropic_backend.py  base.py  factory.py  google_backend.py  openai_backend.py
modules/config/: __init__.py  config_loader.py  constants.py  context.py  service.py
modules/config/capabilities/: __init__.py  detection.py  params.py  registry.py
modules/core/: __init__.py  auto_selector.py  batch_submission.py  cli_args.py  execution_framework.py  mode_selector.py  path_config.py  path_utils.py  resume.py  safe_paths.py  token_guard.py  transcription_pipeline.py  utils.py  workflow.py
modules/diagnostics/: __init__.py  system_check.py
modules/documents/: __init__.py  _text.py  auto_selector.py  epub.py  mobi.py  page_range.py  pdf.py
modules/images/: __init__.py  encoding.py  page_stream.py  pipeline.py  tesseract_runtime.py
modules/infra/: __init__.py  concurrency.py  logger.py  multiprocessing_utils.py  paths.py  progress.py  rate_limit.py  shared_ledger.py  token_budget.py  token_tracker.py
modules/io/: __init__.py  directory_utils.py  path_utils.py
modules/llm/: __init__.py  context_utils.py  image_encoding.py  model_capabilities.py  openai_sdk_utils.py  openai_utils.py  prompt_utils.py  quality.py  response_parsing.py  schema_utils.py  schemas.py  structured_outputs.py  transcriber.py
modules/llm/batch/: __init__.py  batching.py  (+1 more)
modules/operations/: __init__.py  batch_check.py  cost_analysis.py  jsonl_utils.py  openai_client.py  repair.py
modules/postprocess/: __init__.py  text.py  writer.py
modules/processing/: __init__.py  content_quality_error.py  content_validators.py  epub_utils.py  image_utils.py  mobi_utils.py  model_utils.py  output_writer.py  pdf_utils.py  postprocess.py  response_parsing.py  tesseract_utils.py  text_processing.py
modules/testing/: __init__.py  fixtures.py
modules/transcribe/: __init__.py  config_builder.py  dual_mode.py  manager.py  pipeline.py  resume.py  user_config.py
modules/ui/: __init__.py  batch_display.py  core.py  cost_display.py  prompts.py  workflows.py
schemas/: markdown_transcription_schema.json  plain_text_transcription_schema.json  plain_text_transcription_with_markers_schema.json  swiss_address_book_schema.json  transcription_schema.json
system_prompt/: system_prompt.txt  transcription_prompt_minimal.txt  transcription_prompt_plain.txt  transcription_prompt_schema.txt
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_api_integration.py  test_live_api.py  test_workflow_integration.py
tests/unit/: __init__.py  test_anthropic_provider.py  test_auto_mode_schema.py  test_auto_selector.py  test_batch_backends.py  test_batch_cancel.py  test_batch_check.py  test_batch_display.py  test_batch_processing_utils.py  test_batch_results.py  test_batch_round2.py  test_batch_status.py  test_batch_submission.py  test_cli_args.py  test_concurrency.py  test_config_loader.py  test_config_service.py  test_content_validators.py  test_context_image.py  test_context_utils.py  test_core_utils.py  test_cost_analysis.py  test_cost_display.py  test_create_config_from_cli_args.py  test_ct_regressions.py  test_directory_utils.py  test_epub_utils.py  test_execution_framework.py  test_google_provider.py  test_hardening_findings.py  test_image_preprocess.py  test_interactive_scripts.py  test_jsonl_utils.py  test_llm_init.py  test_mobi_utils.py  test_mode_selector.py  test_model_capabilities.py  test_model_utils.py  test_multiprocessing_utils.py  test_openai_provider.py  (+39 more)
(+122 files in other folders)
