[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronotranscriber"
version = "2.0.4"
description = "LLM-assisted document transcription tool for researchers and archivists"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Paul Goetz", email = "goetz@soziologie.uzh.ch" },
]
keywords = ["transcription", "ocr", "llm", "digital-humanities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]

dependencies = [
    # LLM integration (LangChain abstraction layer)
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langchain-anthropic>=1.4.6",
    "langchain-google-genai>=4.2.5",
    # Direct SDK usage (batch API backends)
    "openai>=2.43",
    "anthropic>=0.111",
    "google-genai>=2",
    # Document processing
    "PyMuPDF>=1.27",
    "EbookLib>=0.20",
    "mobi>=0.4.1",
    "lxml>=6.1.1",
    "pytesseract>=0.3.13",
    # Image processing
    "pillow>=12.2.0",
    "opencv-python>=4.13",
    "deskew>=1.6.1",
    "scikit-image>=0.26",
    "numpy>=2.4.6",
    # Configuration and validation
    "pydantic>=2.13",
    "PyYAML>=6.0",
    # HTTP (direct use in provider retry logic)
    "httpx>=0.28",
    # Async file I/O
    "aiofiles>=25.1",
    # Utilities
    "colorama>=0.4.6",
    "tenacity>=9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4",
    "pytest-cov>=7.0",
    "mypy>=2.1",
    "ruff>=0.15.18",
    "types-aiofiles",
    "types-PyYAML",
    "coverage>=7.14.1",
]
eval = [
    "pandas>=3.0.3",
    "matplotlib>=3.11",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/Paullllllllllllllllll/ChronoTranscriber"
Repository = "https://github.com/Paullllllllllllllllll/ChronoTranscriber"
Issues = "https://github.com/Paullllllllllllllllll/ChronoTranscriber/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Live API smoke tests (marker: api) are opt-in: a plain `pytest` run must
# never make real API calls or burn tokens. Run them explicitly with
# `pytest -m api` (which overrides this deselection).
addopts = "-v --tb=short --strict-markers -m 'not api'"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "slow: Slow tests (skip with -m 'not slow')",
    "api: Tests requiring API keys",
    "windows: Windows-specific tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
# main/ has no __init__.py (its entry-point scripts are run directly), so a bare
# "mypy ." otherwise sees main/*.py twice (as top-level and as main.*). Pin the
# package base to the project root so each file resolves to a single module name.
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
# Type-check the shipped source (main + modules) only; tests/ and eval/ carry
# analysis-only code with intentionally loose typing.
exclude = [
    '^\.venv/',
    '^tests/',
    '^eval/',
    '^staging/',
    '^htmlcov/',
]

[tool.hatch.build.targets.wheel]
packages = ["modules", "main"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-include = ["*.ipynb"]
extend-exclude = ["data/", "outputs/", "scratch", ".claude", "backup", "deprecated", "exploratory", "explorative", "extras"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
docstring-code-format = false

[tool.deptry]
# Treat the dev and eval extras as development dependencies (pytest, mypy, ruff,
# type stubs, and the eval-only pandas/matplotlib/jupyter are not imported in the
# shipped source tree).
pep621_dev_dependency_groups = ["dev", "eval"]
# eval/ and tests/ carry analysis-only imports that are intentionally undeclared.
extend_exclude = ["eval", "tests"]

[tool.deptry.package_module_name_map]
# Distributions whose import name differs from the package name; declaring these
# keeps scans accurate even when deptry runs outside the project venv.
google-genai = ["google"]
PyYAML = ["yaml"]
PyMuPDF = ["fitz"]
pillow = ["PIL"]
opencv-python = ["cv2"]
scikit-image = ["skimage"]
